@@ -67,6 +67,7 @@ gnulib_modules="
   memcpy
   read-file
   vsnprintf-posix
+  pipe2
   "
 
 # gnulib modules used in libpoke/.
